--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@solana/web3.js": "^1.98.4",
     "bs58": "^6.0.0",
     "clsx": "^2.1.1",
+    "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "three": "^0.180.0"
